--- a/index.html
+++ b/index.html
@@ -1,21 +1,98 @@
-<!DOCTYPE HTML>
-<HTML>
-    <HEAD>
-            <TITLE> TUGAS PEMROGRAMAN BERBASIS WEB </TITLE>
-    </HEAD>
-    <BODY>
-          <H1> SELAMAT DATANG </H1>
-             <P>
-                 <A HREF="INDEX.HTML">HOME</A> /
-                 <A HREF="FOAM.HTML"> FOAM </A> /
-                 <A HREF="LIST.HTML"> LIST </A> /
-                 <A HREF="TABEL.HTML">TABEL </A> 
-             </P>
-             <HR>
-             <P>
-                 Selamat datang di websiteku. coba klik menu di atas maka kamu akan membuka halaman yang berdeda.
-             </P>
-             <hr>
-             <DIV> TUGAS BY PIRLI WIJAYA </DIV>
-    </BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	<head>
+<body>
+    <!-- Container -->
+        <div class="container">
+            <div id="colspan">
+                <img src="file:///c:/Users/Asus/Pictures/IMG-20240329-WA0067.png" style width="500px;">
+                <h4> PIRLI WIJAYA </h4>
+                <p><i class="fa fa-briefcase fa-fw large"></i> CURRICULUM VITAE </p>
+                <p><i class="fa fa-home fa-fw large"></i> CIKUPA , INDONESIA</p>
+                <p><i class="fa fa-phone fa-fw large"></i> 085219960076 </p>
+                <hr>
+                <h3><i class="fa fa-linux fa-fw large"></i> HOBBY </h3>
+                <p> badminton </p>
+                <div class="load">
+                    <div class="progress" style="width:90%">90%</div>
+                </div>
+                <p> futsal </p>
+                <div class="load2">
+                    <div class="progress2" style="width:80%">80%</div>
+                </div>
+                <p> volly </p>
+                <div class="load3">
+                <div class="progress3" style="width:70%">70%</div>
+            </div>
+                <p> billiard </p>
+                <div class="load4">
+                    <div class="progress4" style="width:65%">65%</div>
+                </div>
+                <p> basket </p>
+                    <div class="load4">
+                    <div class="progress4" style="width:65%">65%</div>
+                </div>
+                <p> tennis </p>
+                    <div class="load4">
+                    <div class="progress4" style="width:65%">65%</div>
+                </div>
+                <hr>
+                <h3><i class="fa fa-language fa-fw large"></i>Language</h3>
+                <p> indonesia </p>
+                <p> bahasa daerah </p>
+                <hr>
+                <h3><i class="fa fa-globe fa-fw large"></i>Social Media</h3>
+                <a href="https://www.facebook.com/pirliwijaya"><i class="fa fa-facebook fa-fw large"></i></a>
+                <a href="https://www.instagram.com/pirliwijaya/?hl=id"><i class="fa fa-instagram fa-fw large"></i></a>
+                <a href="#"><i class="fa fa-twitter fa-fw large"></i></a>
+                <a href="https://github.com/pirliwijaya"><i class="fa fa-github fa-fw large"></i></a>
+                <a href="#"><i class="fa fa-git fa-fw large"></i></a>
+            </div>
+          <div class="container-padding">
+        <div class="padding">
+                <div class="content1">
+            <h2><i class="fa fa-briefcase fa-fw large"></i>School</h2>
+            <h3>Sekolah Dasar Negeri tangkas </h3>
+            <p><i class="fa fa-calendar fa-fw large"></i>2008-2014</p>
+            <p>tangkas kec. kasui kab. way kanan lampung indonesia
+            </p>
+            </div>
+            <hr>
+                <div class="content2">
+            <h3> madrasah tsanawiyah negeri 1 kasui </h3>
+            <p><i class="fa fa-calendar fa-fw large"></i>2014-2017</p>
+            <p>kasui kab. way kanan lampunng indonesia
+            </p>
+            </div>
+            <hr>
+                <div class="content3"> 
+            <h3>Sekolah Menengah Kejuruan al-fajar kasui  </h3>
+            <p><i class="fa fa-calendar fa-fw  Letris 1 Indonesialarge"></i>2017-2020</p>
+            <p>kasui kab. way kanan lampung indonesia
+            </p>
+            </div>
+            </div>
+            </div>
+          <div class="padding-bottom">
+                <div class="bottom">
+                 <div class="content1">
+            <h2><i class="fa fa-briefcase fa-fw large"></i>Pengalaman kerja  :</h2>
+            <h3> karyawan di pt sarana komunika indonesia </h3>
+            <p><i class="fa fa-calendar fa-fw large"></i> 2020 </p>
+            </div>
+            <hr>
+                <div class="content2">
+            <h3> karyawan di pt mayora indah tbk </h3>
+            <p><i class="fa fa-calendar fa-fw large"></i>2021</p>
+ 
+           
+            </div>
+            <hr>
+                <div class="content3"> 
+            <h3> karyawan di pt indofood furtuna makmur </h3>
+            <p><i class="fa fa-calendar fa-fw large"></i>2022-sekarang</p>
+                        </div>
+            </div>
+        </div>
+    </body>
+</html>
